# wowbot

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  LICENSE.txt  README.md  main.py  pyproject.toml  requirements.txt  sounds.py
.github/workflows/: test.yml
cogs/: __init__.py  cmds.py  componentreactor.py  reactor.py  slash.py  sounds.py  utils.py
cogs/utils/: __init__.py  problem.py  typing.py
docs/: conf.py  index.rst
docs/model/: command.rst  errors.rst  sound.rst
docs/sounds/: commands.rst  sounds.rst
jsons/: reactionguilds.example.json  sounds.json
sounds/: sounds.json
src/wowbot/: __about__.py  __init__.py  __main__.py  command.py  model.py  soundsdir.py
src/wowbot/discord/: bot.py  cogs.py  slash.py  sound.py  util.py
src/wowbot/model/: command.py  errors.py  main.py  model.py  sound.py  soundsdir.py
tests/: __init__.py  test_cli_sounds.py  test_command.py  test_sound.py  test_soundsdir.py  utils.py
tests/sounds/: commands.json  sounds.json
