[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wowbot"
description = 'Discord bot for playing sounds'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [{ name = "Henry Morley", email = "henry@morley.org.uk" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/hrmorley34/wowbot#readme"
Issues = "https://github.com/hrmorley34/wowbot/issues"
Source = "https://github.com/hrmorley34/wowbot"

[tool.hatch.version]
path = "src/wowbot/__about__.py"

[tool.hatch.build.targets.sdist]
[tool.hatch.build.targets.wheel]

[tool.hatch.envs.default]
dependencies = ["pytest", "pytest-cov"]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=wowbot --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["38", "39", "310"]

[tool.coverage.run]
branch = true
parallel = true
omit = ["src/wowbot/__about__.py"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
